# Mailer_PyLAB

./: README.md  client.py  collector.py  pyproject.toml  server.py
mailer_pylab/: startup.py
src/: client.py  collector.py  server.py  utils.py
